test/Fail/OpaqueTypeSig.agda
{-# OPTIONS --warning=error #-}
module OpaqueTypeSig where

open import Agda.Builtin.Unit

opaque
  _ = tt
